--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
   width: 100vw;
   overflow: hidden;
 
+  font-family: -apple-system, "Helvetica Neue", "Arial", "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+
   --skew-dist: 60px;
 }
 
